# petstore

./: .gitignore  Cargo.toml
src/: common.rs  db.rs  endpoint.rs  error.rs  handler.rs  lib.rs  main.rs  model.rs  petstore.rs  responder.rs
src/api/: common.rs  mod.rs  pet.rs  petstore.rs  store.rs  user.rs
src/model/: category.rs  macros.rs  mod.rs  order.rs  pet.rs  tag.rs  user.rs
src/petstore/: mod.rs  repository.rs
