[package]
name = "petstore"
description = "A demo application of Swagger petstore with Finchers"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
version = "0.0.0"

[dependencies]
finchers = { git = "https://github.com/finchers-rs/finchers.git" }
finchers-json = { git = "https://github.com/finchers-rs/finchers.git" }
finchers-urlencoded = { git = "https://github.com/finchers-rs/finchers.git" }

futures = "0.1"
futures-cpupool = "0.1"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.7"
