[package]
name = "petstore"
version = "0.0.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]

[dependencies]
finchers = { git = "https://github.com/finchers-rs/finchers.git" }

derive_more = "0.7"
error-chain = "0.11"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.11"
tokio-core = "0.1"

